RESOLVED FIXED146317
[Mac] Crash in WebCore::MediaPlayer::canPlayToWirelessPlaybackTarget
https://bugs.webkit.org/show_bug.cgi?id=146317
Summary [Mac] Crash in WebCore::MediaPlayer::canPlayToWirelessPlaybackTarget
Eric Carlson
Reported 2015-06-25 09:39:37 PDT
Missing a NULL check.
Attachments
Proposed patch. (1.61 KB, patch)
2015-06-25 09:42 PDT, Eric Carlson
no flags
Eric Carlson
Comment 1 2015-06-25 09:39:57 PDT
Eric Carlson
Comment 2 2015-06-25 09:42:21 PDT
Created attachment 255560 [details] Proposed patch.
Brent Fulgham
Comment 3 2015-06-25 12:39:04 PDT
Comment on attachment 255560 [details] Proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=255560&action=review r=me > Source/WebCore/html/HTMLMediaElement.cpp:6320 > + if (m_player && m_hasPlaybackTargetAvailabilityListeners && !m_mediaSession->wirelessVideoPlaybackDisabled(*this) && m_player->canPlayToWirelessPlaybackTarget()) I wonder if m_mediaSession can ever be null?
Eric Carlson
Comment 4 2015-06-25 13:36:13 PDT
(In reply to comment #3) > Comment on attachment 255560 [details] > Proposed patch. > > View in context: > https://bugs.webkit.org/attachment.cgi?id=255560&action=review > > r=me > > > Source/WebCore/html/HTMLMediaElement.cpp:6320 > > + if (m_player && m_hasPlaybackTargetAvailabilityListeners && !m_mediaSession->wirelessVideoPlaybackDisabled(*this) && m_player->canPlayToWirelessPlaybackTarget()) > > I wonder if m_mediaSession can ever be null? No, it is a std::unique_ptr<> that is allocated in the constructor.
Eric Carlson
Comment 5 2015-06-25 14:01:57 PDT
Note You need to log in before you can comment on or make changes to this bug.