[Mac] Crash in WebCore::MediaPlayer::canPlayToWirelessPlaybackTarget https://bugs.webkit.org/show_bug.cgi?id=146317

Reviewed by Brent Fulgham.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaState): NULL-check m_player before using it.


Canonical link: https://commits.webkit.org/164399@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185962 268f45cc-cd09-0410-ab3c-d52691b4dbfc